--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mohit Rajput - Software Developer Portfolio</title>
-    <meta name="description" content="Portfolio of Mohit Rajput - Software Developer specializing in MERN stack, Java, and full-stack web development." />
-    <meta name="author" content="Mohit Rajput" />
+    <title>Abhishekh Jadam - Software Developer Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio of Abhishekh Jadam - Software Developer specializing in MERN stack, Java, and full-stack web development."
+    />
+    <meta name="author" content="Abhishekh Jadam" />
 
-    <meta property="og:title" content="Mohit Rajput - Software Developer Portfolio" />
-    <meta property="og:description" content="Portfolio of Mohit Rajput - Software Developer specializing in MERN stack, Java, and full-stack web development." />
+    <meta
+      property="og:title"
+      content="Abhishekh Jadam - Software Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Portfolio of Abhishekh Jadam - Software Developer specializing in MERN stack, Java, and full-stack web development."
+    />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
